fixed whitespace

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -134,6 +134,7 @@ i {
 }
 
 .playlist-container, .songs-container {
+  padding-top: 50px;
   height: 50%;
 }
 
